fix the typo error

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,5 @@ jobs:
         node-version: 20
     - name: Install dependencies    
       run: npm install
-    - run: nmp run test  
+    - run: npm run test  
    
