--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,6 @@ jobs:
         node-version: 20
     - name: Install dependencies    
       run: npm install
-    - run: npm run test  
+    - name: Execute integration tests  
+      run: npm run test  
    
