--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_test:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
@@ -24,6 +24,25 @@ jobs:
         node-version: ${{matrix.node-version}}
     - name: Install dependencies    
       run: npm install
-    - name: Execute integration tests  
-      run: npm run test  
+   
+  test:
+    runs-on: ubuntu-latest
+    
+    strategy:
+        matrix:
+         node-version: [18.x, 20.x, 22.x]
+    
+    steps:
+     - name: Checkout the code
+       uses: actions/checkout@v4
+     - name: Install Node.js
+       uses: actions/setup-node@v4
+       with:
+         node-version: ${{matrix.node-version}}
+     - name: Install dependencies    
+       run: npm install
+     - name: Execute integration tests  
+       run: npm run test    
+      
+      
    
